Fix issue in accordion when the window is too narrow - gap in the left side of the accordion items if the accordion title is long

--- a/lifeline.css
+++ b/lifeline.css
@@ -264,7 +264,7 @@ placeholderTime {
 	cursor: pointer;
 }
 
-.groupAccordion:after {
+.groupAccordion:before {
 	content: '\002B';
 	
 	font-weight: bold;
@@ -272,7 +272,7 @@ placeholderTime {
 	margin-right: 10px;
 }
 
-.groupAccordion-active:after {	
+.groupAccordion-active:before {	
 	content: "\2212";	
 }
 
